photo post spacing fixes

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -70,6 +70,7 @@ p {
   font-family: $serif;
   margin: 0 0 ($base-spacing / 2);
   font-size: $reading-font-size;
+  &:last-child {margin-bottom: 0;}
   @include media($phone) {
     font-size: 1.125em;
   }
