--- a/static/css/main.css
+++ b/static/css/main.css
@@ -647,6 +647,9 @@ p {
   margin: 0 0 0.75em;
   font-size: 1.25em;
 }
+p:last-child {
+  margin-bottom: 0;
+}
 @media screen and (max-width: 479px) {
   p {
     font-size: 1.125em;
@@ -2516,9 +2519,16 @@ body:not(.page--index) .content {
 .post-title {
   text-align: center;
   max-width: 43.75em;
-  margin: 4em auto 5em;
+  margin: 5em auto 2em;
   padding-left: 6px;
   padding-right: 6px;
+}
+.post-text + .post-title {
+  margin-top: 4em;
+}
+
+.post-title--top {
+  margin-bottom: 5em;
 }
 
 .post-title__text {
@@ -2547,6 +2557,7 @@ body:not(.page--index) .content {
 }
 
 .post-text {
+  position: relative;
   box-sizing: content-box;
   max-width: 37.5em;
   margin: 2em auto 2.5em;
@@ -2555,10 +2566,21 @@ body:not(.page--index) .content {
 .post-text:last-child {
   margin-bottom: 0;
 }
+.post-title + .post-text {
+  margin-top: 0;
+}
+.post-text + .post-text {
+  padding-top: 2em;
+  border-top: 1px solid rgba(59, 53, 61, 0.2);
+}
 @media screen and (max-width: 479px) {
   .post-text {
     padding: 0 1.875em;
   }
+}
+
+.post-title + .post-gallery {
+  margin-top: 4em;
 }
 
 .post-gallery__item {
